[gd_scene load_steps=9 format=3 uid="uid://bvjtglvn4vawb"]

[ext_resource type="Script" path="res://global/installs_index.gd" id="1_xlf4w"]
[ext_resource type="FontFile" uid="uid://it54mtueqiuj" path="res://ui_resources/font_robotoB.ttf" id="2_vrh48"]

[sub_resource type="Animation" id="Animation_66wc2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RectBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.137255)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RectBackground:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(332, 294)]
}

[sub_resource type="Animation" id="Animation_05n4n"]
resource_name = "in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RectBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.137255)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RectBackground:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"grab_focus"
}]
}

[sub_resource type="Animation" id="Animation_6gaof"]
resource_name = "out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RectBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.137255), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RectBackground:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_78lnl"]
resource_name = "refuse"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(332, 294), Vector2(312, 294), Vector2(352, 294), Vector2(316, 294), Vector2(344, 294), Vector2(328, 294), Vector2(332, 294)]
}

[sub_resource type="Animation" id="Animation_65crw"]
resource_name = "wait_hidden"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RectBackground:mouse_filter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RectBackground:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(332, 294)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fiiku"]
_data = {
"RESET": SubResource("Animation_66wc2"),
"in": SubResource("Animation_05n4n"),
"out": SubResource("Animation_6gaof"),
"refuse": SubResource("Animation_78lnl"),
"wait_hidden": SubResource("Animation_65crw")
}

[node name="InstallsIndex" type="CanvasLayer"]
layer = 2
script = ExtResource("1_xlf4w")

[node name="RectBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.137255)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(360, 180)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 332.0
offset_top = 294.0
offset_right = 692.001
offset_bottom = 474.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(180, 90)
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = 16.0
offset_right = 155.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(149, 91)
theme_override_constants/separation = 60
alignment = 1

[node name="LabelTitle" type="RichTextLabel" parent="Panel/VBoxContainer"]
clip_contents = false
layout_mode = 2
theme_type_variation = &"TextLarge"
bbcode_enabled = true
text = "[center][wave amp=36]Installing mod..."
fit_content = true

[node name="ProgressBar" type="ProgressBar" parent="Panel/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(260, 4)
layout_mode = 2
size_flags_horizontal = 4
max_value = 1.0
show_percentage = false

[node name="LabelSubtitle" type="RichTextLabel" parent="Panel/VBoxContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -34.0
offset_right = 1.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"TextSubtle"
theme_override_fonts/bold_font = ExtResource("2_vrh48")
bbcode_enabled = true
text = "[center][img width=16 color=#ffffff8b]res://audiovisual/loading.png[/img]   Progress text"
fit_content = true
autowrap_mode = 0

[node name="AcceptDialog" type="AcceptDialog" parent="."]
initial_position = 2
size = Vector2i(400, 100)
unresizable = true
dialog_autowrap = true

[node name="ConfirmationDialogRedirect" type="ConfirmationDialog" parent="."]
size = Vector2i(400, 100)
unresizable = true
ok_button_text = "Yes"
dialog_autowrap = true
cancel_button_text = "No"

[node name="ConfirmationDangerous" type="ConfirmationDialog" parent="."]
size = Vector2i(400, 100)
unresizable = true
ok_button_text = "Yes"
dialog_text = "Are you sure? This action is irreversible."
dialog_autowrap = true
cancel_button_text = "No"

[node name="TimerUpdateProgressbar" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fiiku")
}
autoplay = "wait_hidden"
speed_scale = 1.2

[node name="HTTPRequestGame" type="HTTPRequest" parent="."]
use_threads = true

[node name="HTTPRequestItchURL" type="HTTPRequest" parent="."]
download_chunk_size = 4096

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="confirmed" from="ConfirmationDialogRedirect" to="." method="_on_confirmation_dialog_redirect_confirmed"]
[connection signal="timeout" from="TimerUpdateProgressbar" to="." method="_on_timer_update_progressbar_timeout"]
[connection signal="request_completed" from="HTTPRequestGame" to="." method="_on_http_request_game_request_completed"]
[connection signal="request_completed" from="HTTPRequestItchURL" to="." method="_on_http_request_itch_url_request_completed"]
